Diseño de la página de inicio

--- a/index.html
+++ b/index.html
@@ -4,11 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>DentiMax</title>
 </head>
 <body>
+    <div class="menu">
+        <div class="container">
+            <div class="row justify-content-center align-items-center pt-4 pb-4">
+                <div class="col-2">LOGO</div>
+                <div class="col-10">
+                    <ul class="links">
+                        <li class="elementoMenu"><a href="index.html">Inicio</a></li>
+                        <li class="elementoMenu"><a href="#">Sobre Nosotros</a></li>
+                        <li class="elementoMenu"><a href="#">Contacto</a></li>
+                        <li class="elementoMenu dropdown"><a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="img/perfil.png" alt="foto perfil" width="30px" height="30px"></a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#" style="color: black;">Iniciar Sesión</a></li>
+                                <li><a class="dropdown-item" href="#" style="color: black;">Crear Cuenta</a></li>
+                              </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="cuerpo">
+        <div class="container">
+            <div class="row justify-content-center align-items-center pt-5 pb-5" style="min-height: 91vh;">
+                <div class="col-6">
+                    <h2 class="display-2">TU SALUD EN NUESTRAS MANOS</h2>
+                    <p>Aquí en nombre de la empresa estamos comprometidos con darte la mejor salud a la mano. Te invitamos a conocer los diferentes servicios y precios que ofrecemos para darte los mejores tratamientos posibles. Es por eso que te invitamos a crear una cuenta y empieza a llevar un registro de tus consultas</p>
+                    <button type="button" class="btn btn-info">Crear cuenta</button>
+                </div>
+                <div class="w-100 d-block d-sm-block d-md-none"></div>
+                <div class="col-6" style="text-align: center;">
+                    <img src="img/diente.png" alt="diente" width="270px" height="270px" style="opacity: 50%;">
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
