--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                         <li class="elementoMenu"><a href="#">Contacto</a></li>
                         <li class="elementoMenu dropdown"><a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="img/perfil.png" alt="foto perfil" width="30px" height="30px"></a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#" style="color: black;">Iniciar Sesión</a></li>
-                                <li><a class="dropdown-item" href="#" style="color: black;">Crear Cuenta</a></li>
+                                <li><a class="dropdown-item" href="login.html" style="color: black;">Iniciar Sesión</a></li>
+                                <li><a class="dropdown-item" href="registro.html" style="color: black;">Crear Cuenta</a></li>
                               </ul>
                         </li>
                     </ul>
