Ajustes de diseño

--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                     <button type="button" class="btn btn-dark" id="iniciarSesion">Iniciar Sesión</button>
                 </div>
                 <div class="mb3 text-center">
-                    <p><a href="login.html">¿Ya tienes cuenta? Inicia sesión aquí</a></p>
+                    <p><a href="registro.html">¿No tienes cuenta? Crea una aquí</a></p>
                 </div>
                 <div class="mb3 text-center">
                     <p><a href="index.html">Regresar a página principal</a></p>
