--- a/registro.html
+++ b/registro.html
@@ -33,7 +33,7 @@
                     <input type="password" class="form-control" id="contrasenaRegistro">
                 </div>
                 <div class="mb-3">
-                    <label for="confirmarContrasena" class="form-label">Reingresar Contraseña:</label>
+                    <label for="confirmarContrasena" class="form-label">Confirmar Contraseña:</label>
                     <input type="password" class="form-control" id="confirmarContrasena">
                 </div>
                 <div class="mb-3 text-center py-1">
