--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
             </div>
         </div>
     </div>
-    <div class="cuerpo">
+    <div>
         <div class="container">
             <div class="row justify-content-center align-items-center pt-5 pb-5" style="min-height: 91vh;">
-                <div class="col-6">
+                <div class="col-10 col-md-6">
                     <h2 class="display-2">TU SALUD EN NUESTRAS MANOS</h2>
                     <p>Aquí en nombre de la empresa estamos comprometidos con darte la mejor salud a la mano. Te invitamos a conocer los diferentes servicios y precios que ofrecemos para darte los mejores tratamientos posibles. Es por eso que te invitamos a crear una cuenta y empieza a llevar un registro de tus consultas</p>
-                    <button type="button" class="btn btn-info">Crear cuenta</button>
+                    <button type="button" class="btn btn-dark">Crear cuenta</button>
                 </div>
-                <div class="w-100 d-block d-sm-block d-md-none"></div>
-                <div class="col-6" style="text-align: center;">
-                    <img src="img/diente.png" alt="diente" width="270px" height="270px" style="opacity: 50%;">
+                <div class="w-100 d-block d-sm-block d-md-none py-3"></div>
+                <div class="col-10 col-md-6" style="text-align: center;">
+                    <img src="img/diente.png" alt="diente" width="270px" height="270px">
                 </div>
             </div>
         </div>
