--- a/panelUsuario.html
+++ b/panelUsuario.html
@@ -42,24 +42,34 @@
             </div>
         </div>
     </nav>
-    <div>
-        <div class="container">
-            <div class="row justify-content-center align-items-center py-3" style="min-height: 70vh;">
-                <div class="col-10 col-md-6">
-                    <h2 class="display-2">TU SALUD EN NUESTRAS MANOS</h2>
-                    <p>Aquí en nombre de la empresa estamos comprometidos con darte la mejor salud a la mano. Te invitamos a conocer los diferentes servicios y precios que ofrecemos para darte los mejores tratamientos posibles. Es por eso que te invitamos a crear una cuenta y empieza a llevar un registro de tus consultas</p>
-                    <button type="button" class="btn btn-dark">Crear cuenta</button>
-                </div>
-                <div class="w-100 d-block d-sm-block d-md-none py-3"></div>
-                <div class="col-10 col-md-6" style="text-align: center;">
-                    <img src="img/diente.png" alt="diente" width="270px" height="270px">
+    <div class="container">
+        <div class="row justify-content-center align-items-center py-3 sombra">
+            <div class="col-12 col-lg-4">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-4">
+                            <img class="img-fluid" src="img/perfil_hombre.jpg" alt="foto de perfil hombre">
+                        </div>
+                        <div class="col-8">
+                            <h6 class="display-6">NOMBRE DEL PACIENTE</h6>
+                            <p>30/08/01 - Número años - Sexo</p>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="col-12 col-lg-6 px-1">
+                <h6 class="display-6">CITAS COMPLETADAS</h6>
+                <p>Nombre del estudio - precio - 10/02/2023</p>
+            </div>
         </div>
-    </div>
-    <div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0048e3" fill-opacity="1" d="M0,128L24,112C48,96,96,64,144,90.7C192,117,240,203,288,213.3C336,224,384,160,432,154.7C480,149,528,203,576,197.3C624,192,672,128,720,90.7C768,53,816,43,864,58.7C912,75,960,117,1008,138.7C1056,160,1104,160,1152,160C1200,160,1248,160,1296,154.7C1344,149,1392,139,1416,133.3L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path></svg>
-        <div class="container">
+        <div class="row py-3">
+            <div class="col-12">
+                <h2 class="display-4">PROXIMA CITA</h2>
+            </div>
+            <div class="col">
+                <h3>20/02/2023 - Nombre del estudio - $Precio</h3>
+                <p>descripción del procedimiento que se va a realizar</p>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
