--- a/registro.html
+++ b/registro.html
@@ -9,45 +9,127 @@
     <title>Login | DentiMax</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row justify-content-center align-items-center fondo">
+    <div class="container-fluid fondo">
+        <div class="row justify-content-center align-items-center py-3">
             <div class="col-10 col-md-4 cuadro p-4">
                 <div class="mb-3">
                     <label for="nombreRegistro" class="form-label">Nombre(s):</label>
                     <input type="text" class="form-control" id="nombreRegistro">
+                    <small class="error" id="errorNombre"></small>
                 </div>
                 <div class="mb-3">
-                    <label for="apellidoPRegistro" class="form-label">Apellido Paterno:</label>
-                    <input type="text" class="form-control" id="apellidoPRegistro">
+                    <div class="row">
+                        <div class="col">
+                            <label for="apellidoPRegistro" class="form-label">Apellido Paterno:</label>
+                            <input type="text" class="form-control" id="apellidoPRegistro">
+                            <small class="error" id="errorApellidoP"></small>
+                        </div>
+                        <div class="col">
+                            <label for="apellidoMRegistro" class="form-label">Apellido Materno:</label>
+                            <input type="text" class="form-control" id="apellidoMRegistro">
+                            <small class="error" id="errorApellidoM"></small>
+                        </div>
+                    </div>
                 </div>
                 <div class="mb-3">
-                    <label for="apellidoMRegistro" class="form-label">Apellido Materno:</label>
-                    <input type="text" class="form-control" id="apellidoMRegistro">
+                    <div class="row">
+                        <div class="col">
+                            <label for="dia" class="form-label">Día</label>
+                            <select class="form-select" name="dia" id="dia">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                                <option value="21">21</option>
+                                <option value="22">22</option>
+                                <option value="23">23</option>
+                                <option value="24">24</option>
+                                <option value="25">25</option>
+                                <option value="26">26</option>
+                                <option value="27">27</option>
+                                <option value="28">28</option>
+                                <option value="29">29</option>
+                                <option value="30">30</option>
+                                <option value="31">31</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            <label for="mes" class="form-label">Mes</label>
+                            <select class="form-select" name="mes" id="mes">
+                                <option value="1">Enero</option>
+                                <option value="2">Febrero</option>
+                                <option value="3">Marzo</option>
+                                <option value="4">Abril</option>
+                                <option value="5">Mayo</option>
+                                <option value="6">Junio</option>
+                                <option value="7">Julio</option>
+                                <option value="8">Agosto</option>
+                                <option value="9">Septiembre</option>
+                                <option value="10">Octubre</option>
+                                <option value="11">Noviembre</option>
+                                <option value="12">Diciembre</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            <label for="anho" class="form-label">Año</label>
+                            <select class="form-select" name="anho" id="anho">
+                            </select>
+                        </div>
+                    </div>
+                    <small class="error" id="errorFecha"></small>
+                </div>
+                <div class="mb-3">
+                    <label for="sexo" class="form-label">Sexo</label>
+                    <select class="form-select" name="sexo" id="sexo">
+                        <option value="hombre">Hombre</option>
+                        <option value="mujer">Mujer</option>
+                    </select>
                 </div>
                 <div class="mb-3">
                     <label for="correoRegistro" class="form-label">Correo Electronico:</label>
                     <input type="email" class="form-control" id="correoRegistro">
+                    <small class="error" id="errorCorreo"></small>
                 </div>
                 <div class="mb-3">
                     <label for="contrasenaRegistro" class="form-label">Contraseña:</label>
                     <input type="password" class="form-control" id="contrasenaRegistro">
+                    <small class="error" id="errorContrasena"></small>
                 </div>
                 <div class="mb-3">
                     <label for="confirmarContrasena" class="form-label">Confirmar Contraseña:</label>
                     <input type="password" class="form-control" id="confirmarContrasena">
+                    <small class="error" id="errorCContrasena"></small>
                 </div>
                 <div class="mb-3 text-center py-1">
-                    <button type="button" class="btn btn-dark" id="iniciarSesion">Registrarse</button>
+                    <button type="button" class="btn btn-dark" id="registrarse">Registrarse</button>
                 </div>
                 <div class="mb3 text-center">
-                    <p><a href="login.html">¿Ya tienes cuenta? Inicia sesión aquí</a></p>
+                    <p><a href="login.html" class="enlaces">¿Ya tienes cuenta? Inicia sesión aquí</a></p>
                 </div>
                 <div class="mb3 text-center">
-                    <p><a href="index.html">Regresar a página principal</a></p>
+                    <p><a href="index.html" class="enlaces">Regresar a página principal</a></p>
                 </div>
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
     <script src="js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="js/registro.js"></script>
 </body>
 </html>
