--- a/panelDentista.html
+++ b/panelDentista.html
@@ -34,8 +34,8 @@
                             <img src="img/perfil.png" alt="foto perfil" width="30px" height="30px">
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
-                          <li><a class="dropdown-item" href="registro.html">Registrarse</a></li>
+                          <li><a class="dropdown-item" href="panelDentista.html">Mi panel</a></li>
+                          <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -48,8 +48,11 @@
                 <div class="col">
                     <ul class="pantallas py-3">
                         <li class="elementoSubMenu"><a class="textoNegro" href="#">General</a></li>
+                        <div class="w-100 d-block d-sm-block d-md-none py-3"></div>
                         <li class="elementoSubMenu"><a class="textoNegro" href="#">Calendario</a></li>
+                        <div class="w-100 d-block d-sm-block d-md-none py-3"></div>
                         <li class="elementoSubMenu"><a class="textoNegro" href="#">Citas</a></li>
+                        <div class="w-100 d-block d-sm-block d-md-none py-3"></div>
                         <li class="elementoSubMenu"><a class="textoNegro" href="#">Pacientes</a></li>
                     </ul>
                 </div>
