--- a/panelUsuario.html
+++ b/panelUsuario.html
@@ -34,8 +34,8 @@
                             <img src="img/perfil.png" alt="foto perfil" width="30px" height="30px">
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
-                          <li><a class="dropdown-item" href="registro.html">Registrarse</a></li>
+                          <li><a class="dropdown-item" href="panelUsuario.html">Mi panel</a></li>
+                          <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
                         </ul>
                     </li>
                 </ul>
